<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_bag"
        android:icon="@drawable/ic_bag_gym"
        android:title="@string/title_bag" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_sell_article"
        android:icon="@drawable/ic_baseline_add_circle_outline_24"
        android:title="@string/title_article" />

    <item
        android:id="@+id/navigation_gallery"
        android:icon="@drawable/ic_group_profile_users"
        android:title="@string/title_community" />

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/ic_user_24"
        android:title="@string/title_user" />

</menu>